--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 70px;
 }
 
 .players{
@@ -58,10 +59,10 @@ main{
 }
 .player{
     padding: 15px;
-width: 330px;
-height: 474px;
-background: #FFFFFF;
-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    width: 330px;
+    height: 474px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 
 }
 .about-player img{
@@ -69,10 +70,15 @@ box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
     height: 256px;
     padding-left: 15px;
 }
+.about-player h2{
+    font-weight: bold;
+    font-size: 28px;
+}
 .about-player p{
     color: #6C6C6C;
 }
 
+/* copa cup style */
 .cup-part{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -84,4 +90,45 @@ box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
     font-weight: bold;
     font-size: 64px;
     color: black;
+}
+
+/* footbaal part style */
+#about-football{
+    margin-right: 30%;
+}
+
+/* footer */
+.footer {
+    height: 180px;
+    color: black;
+}
+.footer-items {
+    text-align: center;
+    padding: 5px;
+    line-height: 1;
+    margin-bottom: 0;
+}
+.social-icons{
+    color: lightgray;
+}
+.social-icon {
+    font-size: 15px;
+    color: white;
+    margin: 5px;
+    padding: 5px;
+    background-color: black;
+    border-radius: 50px;
+}
+.footer-items img{
+    width: 350px;
+}
+.footer-items p{
+    font-size: 18px;
+}
+
+/*------------------------------------
+Doing responsive by using media query 
+-------------------------------------*/
+@media only screen and (max-width:688px){
+    
 }
